--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-moment": "^0.9.7",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "sweetalert2": "^9.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
